--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
               <h2>AI SCAM DETECTOR</h2>
               <p>Di sini, kami menyediakan alat untuk membantu Anda mengenali dan menghindari penipuan online. Dengan sistem <a rel="nofollow" href="#" target="_blank">ChatBot</a> kami, Anda dapat memeriksa apakah tautan yang Anda temui adalah <i>scam </i> atau tidak.</p>
               <div class="main-button-red">
-                <div class="scroll-to-section">
-                  <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector"><b>AI Scam Detector</b> <i class="fas fa-search-plus animated-icon"></i></a>
+                  <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector"><b>Link Scam Detector</b> <i class="fas fa-search-plus animated-icon"></i></a>
                 </div>
               </div>
             </div>
