--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
               <h2>AI SCAM DETECTOR</h2>
               <p>Di sini, kami menyediakan alat untuk membantu Anda mengenali dan menghindari penipuan online. Dengan sistem <a rel="nofollow" href="#" target="_blank">ChatBot</a> kami, Anda dapat memeriksa apakah tautan yang Anda temui adalah <i>scam </i> atau tidak.</p>
               <div class="main-button-red">
-                  <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector"><b>Link Scam Detector</b> <i class="fas fa-search-plus animated-icon"></i></a>
+                  <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector" class="scam-detector-button">
+  <b>Link Scam Detector</b> 
+  <i class="fas fa-search animated-icon"></i>
+</a>
                 </div>
               </div>
             </div>
