--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
   <script src="assets/js/video.js"></script>
   <script src="assets/js/slick-slider.js"></script>
   <script src="assets/js/custom.js"></script>
+  <script src="//code.tidio.co/1vsozotmal2zleauiotavwhrjterf6ha.js" async></script>
   <script>
         //according to loftblog tut
     $('.nav li:first').addClass('active');
