--- a/index.html
+++ b/index.html
@@ -38,25 +38,6 @@
 
 <body>
 
-  <!-- Sub Header -->
-  <div class="sub-header">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-sm-8">
-        </div>
-        <div class="col-lg-4 col-sm-4">
-          <div class="right-icons">
-            <ul>
-              <li><a href="#"><i class="fa fa-google"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
   <!-- ***** Header Area Start ***** -->
   <header class="header-area header-sticky">
     <div class="container">
@@ -70,17 +51,10 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
-              <li><a href="#consultation">Consultation</a></li>
-              <li class="scroll-to-section"><a href="#">About us</a></li>
-              <li class="has-sub">
-                <a href="javascript:void(0)">Pages</a>
-                <ul class="sub-menu">
-                  <li><a href="#">Upcoming Meetings</a></li>
-                  <li><a href="#">Meeting Details</a></li>
-                </ul>
-              </li>
-              <li class="scroll-to-section"><a href="#">Contact Us</a></li> 
+              <li class="scroll-to-section"><a href="#top" class="active">Chat With Bot</a></li>
+              <li><a href="#consultation">Scam News</a></li>
+              <li class="scroll-to-section"><a href="#">Report</a></li>
+              <li class="scroll-to-section"><a href="#">About us</a></li> 
             </ul>        
             <a class='menu-trigger'>
               <span>Menu</span>
@@ -96,7 +70,7 @@
   <!-- ***** Main Banner Area Start ***** -->
   <section class="section main-banner" id="top" data-section="section1">
     <video autoplay muted loop id="bg-video">
-      <source src="assets/images/course-video.mp4" type="video/mp4" />
+      <source src="assets/images/course-video.mp" type="video/mp4" />
     </video>
 
     <div class="video-overlay header-text">
@@ -104,14 +78,14 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="caption">
-              <h2>AI SCAM DETECTOR</h2>
-              <p>Di sini, kami menyediakan alat untuk membantu Anda mengenali dan menghindari penipuan online. Dengan sistem <a rel="nofollow" href="#" target="_blank">ChatBot</a> kami, Anda dapat memeriksa apakah tautan yang Anda temui adalah <i>scam </i> atau tidak.</p>
-              <div class="main-button-red">
-                  <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector" class="scam-detector-button">
-  <b>Link Scam Detector</b> 
-  <i class="fas fa-search animated-icon"></i>
-</a>
-                </div>
+              <h3 class="judul">
+                <span style="color: #ff0009">AI</span> canggih untuk menilai <span style="color: #ff0009">risiko penipuan</span> dari situs online</h3>
+                <p class="subjudul">Cek apakah informasi / tawaran yang anda terima legit menggunakan AI dari kami!</p>
+                <img src="assets/images/main.png" class="main-image">
+
+                <a href="https://chatgpt.com/g/g-r1aH7ez9k-scam-detector" class="scam-detector-button">
+                  <img src="assets/images/ai.png"> 
+                </a>
               </div>
             </div>
           </div>
@@ -121,56 +95,7 @@
   </section>
   <!-- ***** Main Banner Area End ***** -->
 
-  <!-- ***** hightlight berita area start ***** -->
-  <section class="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="owl-service-item owl-carousel">
-
-            <div class="item item-bg1" style="padding-bottom: 150px; position: relative;">
-              <div class="icon">
-                <img src="assets/images/bn.png" alt="">
-              </div>
-              <div class="down-content" style="position: absolute; bottom: 10px; left: 10px; text-align: left;">
-                <h4>
-                  Presenter Berita Virtual AI Hadir di Tanah Air
-                </h4>
-                <p><a href="https://www.voaindonesia.com/a/presenter-berita-virtual-ai-hadir-di-tanah-air-masyarakat-siap-/7079939.html" style="color: #fff; text-decoration: none; font-weight: bold;">Baca Selengkapnya...</a></p>
-              </div>
-            </div>
-
-
-            <div class="item item-bg2" style="padding-bottom: 150px; position: relative;">
-              <div class="icon">
-                <img src="assets/images/bn.png" alt="">
-              </div>
-              <div class="down-content" style="position: absolute; bottom: 10px; left: 10px; text-align: left;">
-                <h4>
-                  Presenter Berita Virtual AI Hadir di Tanah Air
-                </h4>
-                <p><a href="https://www.voaindonesia.com/a/presenter-berita-virtual-ai-hadir-di-tanah-air-masyarakat-siap-/7079939.html" style="color: #fff; text-decoration: none; font-weight: bold;">Baca Selengkapnya...</a></p>
-              </div>
-            </div>
-
-            <div class="item item-bg3" style="padding-bottom: 150px; position: relative;">
-              <div class="icon">
-                <img src="assets/images/bn.png" alt="">
-              </div>
-              <div class="down-content" style="position: absolute; bottom: 10px; left: 10px; text-align: left;">
-                <h4>
-                  Indosat Naik 11 Persen YoY di 2024, Ada Kontribusi AI
-                </h4>
-                <p><a href="https://www.cnnindonesia.com/teknologi/20241031093410-213-1161453/cuan-indosat-naik-11-persen-yoy-di-2024-ada-kontribusi-ai" style="color: #fff; text-decoration: none; font-weight: bold;">Baca Selengkapnya...</a></p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ***** hightlight berita area end ***** -->
+  
 
   <section class="upcoming-meetings" id="meetings">
     <div class="container">
@@ -468,7 +393,6 @@
   <script src="assets/js/video.js"></script>
   <script src="assets/js/slick-slider.js"></script>
   <script src="assets/js/custom.js"></script>
-  <script src="//code.tidio.co/1vsozotmal2zleauiotavwhrjterf6ha.js" async></script>
   <script>
         //according to loftblog tut
     $('.nav li:first').addClass('active');
@@ -516,7 +440,7 @@
     });
 
 //ai script start
-    
+
 // ai script end
 
   //gulir smooth start
