--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              Edu.id
+              <img src="assets/images/logo.png" alt="Edu.id Logo" />
             </a>
             <!-- ***** Logo End ***** -->
+
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
               <li class="scroll-to-section"><a href="#top" class="active">Chat With Bot</a></li>
@@ -185,6 +186,9 @@
     </div>
   </div>
   <!-- ***** all news Start ***** -->
+
+ 
+
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
@@ -193,6 +197,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
 
   <script src="assets/js/isotope.min.js"></script>
@@ -269,22 +274,153 @@
     });
 //slider script end
 
-  //gulir smooth start
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
+//laporan penipuan start
+    let currentSlide = 0;
 
-        const target = document.querySelector(this.getAttribute('href'));
-        if (target) {
-          target.scrollIntoView({
+    function loadReports() {
+      const reports = JSON.parse(localStorage.getItem('reports')) || [];
+      reports.forEach(addReportToSlider);
+      startAutoSlide();
+    }
+
+    function saveReport(report) {
+      const reports = JSON.parse(localStorage.getItem('reports')) || [];
+      reports.push(report);
+      localStorage.setItem('reports', JSON.stringify(reports));
+    }
+
+    function submitReport() {
+      const firstName = document.getElementById('firstName').value;
+      const lastName = document.getElementById('lastName').value;
+      const category = document.getElementById('category').value;
+      const scamLink = document.getElementById('scamLink').value;
+      const notes = document.getElementById('notes').value;
+    const scamImage = document.getElementById('scamImage').files[0]; // Akses file gambar
+
+    if (!firstName || !lastName || !category || !scamLink || !notes || !scamImage) {
+      alert("Mohon isi semua kolom dan upload gambar!");
+      return;
+    }
+
+    const reader = new FileReader();
+    reader.onload = function(e) {
+      const report = {
+        firstName,
+        lastName,
+        category,
+        scamLink,
+        notes,
+            imageUrl: e.target.result // URL dari gambar yang di-upload
+          };
+          saveReport(report);
+          addReportToSlider(report);
+        };
+        reader.readAsDataURL(scamImage);
+
+    // Bersihkan form setelah submit
+        document.getElementById('firstName').value = '';
+        document.getElementById('lastName').value = '';
+        document.getElementById('category').value = '';
+        document.getElementById('scamLink').value = '';
+        document.getElementById('notes').value = '';
+    document.getElementById('scamImage').value = ''; // Bersihkan file gambar
+  }
+
+  function addReportToSlider(report) {
+    const reportItem = document.createElement('div');
+    reportItem.classList.add('report-item');
+    reportItem.innerHTML = `
+    <h3>${report.category}</h3>
+    <p><strong>Nama:</strong> ${report.firstName} ${report.lastName}</p>
+    <p><strong>Link:</strong> <a href="${report.scamLink}" target="_blank">${report.scamLink}</a></p>
+    <p><strong>Catatan:</strong> ${report.notes}</p>
+    <img src="${report.imageUrl}" alt="Foto Penipuan">
+    `;
+    document.getElementById('reportSlider').appendChild(reportItem);
+  }
+
+  function startAutoSlide() {
+    setInterval(() => {
+      nextSlide();
+    }, 2000);
+
+    let startX, endX;
+    let isDragging = false;
+
+    // Gesture untuk mobile
+    document.getElementById('reportSliderWrapper').addEventListener('touchstart', (e) => {
+      startX = e.touches[0].clientX;
+    });
+
+    document.getElementById('reportSliderWrapper').addEventListener('touchend', (e) => {
+      endX = e.changedTouches[0].clientX;
+      if (endX < startX) nextSlide();
+      if (endX > startX) prevSlide();
+    });
+
+    // Gesture untuk desktop (drag)
+    document.getElementById('reportSliderWrapper').addEventListener('mousedown', (e) => {
+      isDragging = true;
+      startX = e.clientX;
+    });
+
+    document.getElementById('reportSliderWrapper').addEventListener('mousemove', (e) => {
+      if (isDragging) {
+        endX = e.clientX;
+        if (endX < startX) {
+          nextSlide();
+          isDragging = false;
+        } else if (endX > startX) {
+          prevSlide();
+          isDragging = false;
+        }
+      }
+    });
+
+    document.getElementById('reportSliderWrapper').addEventListener('mouseup', () => {
+      isDragging = false;
+    });
+
+    document.getElementById('reportSliderWrapper').addEventListener('mouseleave', () => {
+      isDragging = false;
+    });
+  }
+
+  function nextSlide() {
+    const reports = document.querySelectorAll('.report-item');
+    if (reports.length > 1) {
+      currentSlide = (currentSlide + 1) % reports.length;
+      document.getElementById('reportSlider').style.transform = `translateX(-${currentSlide * 100}%)`;
+    }
+  }
+
+  function prevSlide() {
+    const reports = document.querySelectorAll('.report-item');
+    if (reports.length > 1) {
+      currentSlide = (currentSlide - 1 + reports.length) % reports.length;
+      document.getElementById('reportSlider').style.transform = `translateX(-${currentSlide * 100}%)`;
+    }
+  }
+
+  window.onload = loadReports;
+//laporan penipuan start
+
+  //gulir smooth start
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function(e) {
+      e.preventDefault();
+
+      const target = document.querySelector(this.getAttribute('href'));
+      if (target) {
+        target.scrollIntoView({
           behavior: 'smooth' // Menambahkan efek gulir halus
         });
-        }
-      });
+      }
     });
+  });
   //gulir smooth end
-  </script>
-</body>
 
+</script>
+</body>
 </body>
 </html>
