--- a/index.html
+++ b/index.html
@@ -187,7 +187,247 @@
   </div>
   <!-- ***** all news Start ***** -->
 
- 
+  <!-- ***** find Start ***** -->
+  <section class="upcoming-meetings" id="meetings">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="section-heading">
+            <div class="find">
+              <h1>Temukan Pengalaman <span style="color: #ff0000"> Penipuan</span> dari User Lain!</h1>
+            </div>
+            <main>
+              <p>Temukan segala modus penipuan yang di temukan oleh user lainnya!</p>
+            </main>
+          </div>
+        </div>
+
+        <!-- Swiper Slider Container start-->
+
+        <!-- swiper slider container end -->
+      </div>
+    </div>
+  </section>
+  <!-- ***** find end ***** -->
+
+
+  <!-- Form Input Laporan start -->
+      <h1 class="laporan">Laporkan <span style="color: #ff0000"> Penipuan</span> yang Anda Temukan!</h1>
+  <div class="form-container">
+    <div class="form-grid">
+      <input type="text" id="firstName" placeholder="Nama depan....">
+      <input type="text" id="lastName" placeholder="Nama belakang....">
+      <select id="category">
+        <option value="">Kategori Penipuan</option>
+        <option value="crypto">Crypto</option>
+        <!-- Tambahkan opsi kategori lain di sini -->
+      </select>
+      <input type="url" id="scamLink" placeholder="Link URL Penipuan....">
+      <textarea id="notes" placeholder="Catatan..."></textarea>
+
+      <!-- Tambahkan input file untuk gambar -->
+      <input type="file" id="scamImage" accept="image/*">
+
+      <!-- Tambahkan tombol Kirim -->
+      <button onclick="submitReport()">Kirim Laporan <i class="fa fa-paper-plane" style="margin-left: 8px;"></i></button>
+    </div>
+  </div>
+
+  <!-- Slider Laporan -->
+  <div id="reportSliderWrapper">
+    <div id="reportSlider"></div>
+  </div>
+
+
+  <!-- Slider Laporan -->
+  <div id="reportSliderWrapper">
+    <div id="reportSlider"></div>
+  </div>
+  <!-- Form Input Laporan end -->
+
+  <div id="consultation">
+    <section class="apply-now" id="apply">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 align-self-center">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="item">
+                  <h3>Ingin melakukan konsultasi lebih lanjut?</h3>
+                  <div class="main-button-red">
+                    <div class="scroll-to-section"><a href="#"><b>Roy Shakti </b></a></div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="item">
+                  <h3>Tertarik untuk bergabung di komunitas EDU.id?</h3>
+                  <div class="main-button-yellow">
+                    <div class="scroll-to-section"><a href="#"><b>Forum Kami </b></a></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="accordions is-first-expanded">
+              <article class="accordion">
+                <div class="accordion-head">
+                  <span>Apa itu EDU.id?</span>
+                  <span class="icon">
+                    <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                <div class="accordion-body">
+                  <div class="content">
+                    <p><b>EDU.id </b> adalah sebuah platform yang dapat membantu kamu untuk mempelajari seputar dunia Digital dan Artificial Inteligence(AI). Disini kamu juga dapat melaporkan <span style="color: #a12c2f;"> LINK SCAM</span> pada AI yang ada disini loh, keren bukan!</p>
+                  </div>
+                </div>
+              </article>
+              <article class="accordion">
+                <div class="accordion-head">
+                  <span>Apakah ada biaya yang harus saya bayar untuk ini?</span>
+                  <span class="icon">
+                    <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                <div class="accordion-body">
+                  <div class="content">
+                    <p><span style="color: #a12c2f;"> Tidak ada biaya</span> yang harus kamu bayarkan kecuali jika kamu mengikuti acara seminar dan webinar tersebut, di <b>EDU.id </b>semua yang kamu pelajari disini bersifat gratis tanpa dikutip biaya sepeser pun.</p>
+                  </div>
+                </div>
+              </article>
+              <article class="accordion">
+                <div class="accordion-head">
+                  <span>Saya sudah tua, apakah sudah terlambat untuk belajar?</span>
+                  <span class="icon">
+                    <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                <div class="accordion-body">
+                  <div class="content">
+                    <p>Umur tidak pernah menjadi masalah, karena kita tau <span style="color: #a12c2f"> hal terbaik untuk memulai adalah melakukannya</span>, dengan adanya AI di <b>EDU.id </b>kami siap membantu Anda untuk menambah wawasan di era yang serba digital ini.</p>
+                  </div>
+                </div>
+              </article>
+              <article class="accordion last-accordion">
+                <div class="accordion-head">
+                  <span>Tidak di support oleh teman dan keluarga, apakah saya bisa melakukannya?</span>
+                  <span class="icon">
+                    <i class="icon fa fa-chevron-right"></i>
+                  </span>
+                </div>
+                <div class="accordion-body">
+                  <div class="content">
+                    <p>Mimin ngerti kok rasanya tidak di support oleh keluarga dan teman, itulah fungsinya forum di <b>EDU.id </b>untuk menjadi teman yang saling support dengan visi, misi dan tujuan yang sama, karena <span style="color:#a12c2f">relasi adalah hal yang penting dalam mencapai kesuksesan,</span> semangat ya!</p>
+                  </div>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <section class="our-facts">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <div class="row">
+            <div class="col-lg-12">
+              <h2>Jumlah <span style="color: #a12c2f"> Link Scam</span> Yang Telah di Laporkan</h2>
+            </div>
+            <div class="col-lg-6">
+              <div class="row">
+                <div class="col-12">
+                  <div class="count-area-content">
+                    <div class="count-digit">37123</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div> 
+        <div class="col-lg-6 align-self-center">
+          <div class="video">
+            <a href="#" target="_blank"><img src="assets/images/play-icon.png" alt=""></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="contact-us" id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-9 align-self-center">
+          <div class="row">
+            <div class="col-lg-12">
+              <form id="contact" action="" method="post">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <h2 style="color: #a12c2f">Kirim Masukan Kamu disini</h2>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="name" type="text" id="name" placeholder="NAMA...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="email" type="text" id="email" pattern="[^ @]*@[^ @]*" placeholder="EMAIL..." required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-4">
+                    <fieldset>
+                      <input name="subject" type="text" id="subject" placeholder="SUBJEK...*" required="">
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <textarea name="message" type="text" class="form-control" id="message" placeholder="ISI PESAN..." required=""></textarea>
+                    </fieldset>
+                  </div>
+                  <div class="col-lg-12">
+                    <fieldset>
+                      <button type="submit" id="form-submit" class="button"><b>KIRIM</b><i class="fas fa-paper-plane" style="margin-left: 10px;"></i></button>
+
+                    </fieldset>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="right-info">
+            <ul>
+              <li>
+                <h6>Whatsapp</h6>
+                <span>0812-3456-789</span>
+              </li>
+              <li>
+                <h6>Alamat Email</h6>
+                <span>edu.id@gmail.com</span>
+              </li>
+              <li>
+                <h6>Alamat</h6>
+                <span>Indonesia, Jakarta - 20738</span>
+              </li>
+              <li>
+                <h6>Website URL</h6>
+                <span>https://eduai-zeta.vercel.app/</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer">
+      <p>Copyright © 2024 Edu.id Co, Ltd. All Rights Reserved.</p>
+    </div>
+  </section>
 
   <!-- Scripts -->
   <!-- Bootstrap core JavaScript -->
